0029249: Configuration - Standard_Failure compilation fails on VS2013 + Intel Compiler due to unavailability of thread_local

Check __INTEL_COMPILER version in combination with _MSC_VER on Windows.